@@ -2,6 +2,7 @@ package edu.colorado.phet.sugarandsaltsolutions.micro.model.sodiumchloride;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.Crystal;
+import edu.colorado.phet.sugarandsaltsolutions.micro.model.Formula;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.Particle;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.Chloride;
@@ -15,17 +16,12 @@ import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.Sod
 public class SodiumChlorideCrystal extends Crystal<SphericalParticle> {
 
     public SodiumChlorideCrystal( ImmutableVector2D position, double angle ) {
-        super( position, new Chloride().radius + new Sodium().radius, angle );
+        super( new Formula( Sodium.class, Chloride.class ), position, new Chloride().radius + new Sodium().radius, angle );
     }
 
     //Randomly choose an initial particle for the crystal lattice
     public SphericalParticle createSeed() {
         return random.nextBoolean() ? new Sodium() : new Chloride();
-    }
-
-    //Determine whether Na or Cl should be removed from the crystal when dissolving to maintain the ionic balance
-    @Override protected Class<? extends Particle> getMajorityType() {
-        return getMajorityType( Sodium.class, Chloride.class );
     }
 
     //Determine whether Na or Cl should be added to the crystal when growing to maintain the ionic balance
