@@ -3,6 +3,7 @@ package edu.colorado.phet.sugarandsaltsolutions.water.model;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.Crystal;
+import edu.colorado.phet.sugarandsaltsolutions.micro.model.Formula;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.Particle;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.Chloride;
@@ -22,17 +23,12 @@ import static edu.colorado.phet.sugarandsaltsolutions.SugarAndSaltSolutionsResou
 public class SodiumChlorideCrystal extends Crystal<SaltIon> {
 
     public SodiumChlorideCrystal( ImmutableVector2D position, double angle ) {
-        super( position, new Chloride().radius + new edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.Sodium().radius, angle );
+        super( new Formula( SaltIon.SodiumIon.class, SaltIon.ChlorideIon.class ), position, new Chloride().radius + new edu.colorado.phet.sugarandsaltsolutions.micro.model.SphericalParticle.Sodium().radius, angle );
     }
 
     //Randomly choose an initial particle for the crystal lattice
     public SaltIon createSeed() {
         return random.nextBoolean() ? new SaltIon( new SphericalParticle.Sodium(), SODIUM ) : new SaltIon( new Chloride(), CHLORIDE );
-    }
-
-    //Determine whether Na or Cl should be removed from the crystal when dissolving to maintain the ionic balance
-    @Override protected Class<? extends Particle> getMajorityType() {
-        return getMajorityType( SaltIon.SodiumIon.class, SaltIon.ChlorideIon.class );
     }
 
     //Determine whether Na or Cl should be added to the crystal when growing to maintain the ionic balance
